# MyBlog

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: apps.py  swagger_docs.py
accounts/api/: serializers.py  urls.py  views.py
blog_posts/: admin.py  apps.py  models.py  swagger_docs.py
blog_posts/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
blog_posts/migrations/: 0001_initial.py
my_blog/: settings.py  urls.py
templates/: swagger-ui.html
